<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#330000"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Seleccion"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button1"
        style="@style/AppTheme"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="Opcion1"
        android:text="@string/Boton1V2"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="Opcion3"
        android:text="@string/Boton2V2"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>